--- a/index.html
+++ b/index.html
@@ -5,14 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mango</title>
+    <title>Apple</title>
 </head>
 
 <body>
-    <br>
-    <h1>Mango</h1>
-    <hr>
-    <br>
     <p><b>Punto Fa, S.L.</b>, trading as <b>Mango</b>, is a Spanish clothing design and manufacturing company,
         founded in Barcelona, Spain by brothers Isak Andic and Nahman Andic.[1] <b>Mango</b> is an internationally
         famous multinational which designs, manufactures and markets women’s and men’s clothing and accessories.</p>
